# HaasoscopeProPy

./: README.md  pyproject.toml
src/: example.py
src/hassoscopeppy/: adf435x_core.py  board.py  commands.py  connection.py
src/hspro/: __init__.py  adf435x_core.py  board.py  commands.py  mpl_plotter.py  registers_enum.py  utils.py  waveform.py
src/hspro/conn/: connection.py  connection_op.py  usb_connection.py
src/hspro_api/: __init__.py  board.py  commands.py  mpl_plotter.py  registers_enum.py  time_constants.py  utils.py  waveform.py
src/hspro_api/conn/: connection.py  connection_op.py  usb_connection.py
