[project]
name = "HaasoscopeProPy"
dynamic = ["version"]
description = "High level python API to HaasoscopePro"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyftdi",
    "ftd2xx",
    "bitstruct",
    "unlib @ git+https://github.com/priimak/unlib.git@v0.2.1",
]

[project.optional-dependencies]
mpl = [
    "PyQt5",
    "matplotlib"
]

[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.setuptools.packages.find]
where = ["src"]
